harbor/harbor-jobservice_NetworkPolicy_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: jobservice
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/version: 2.12.0
    helm.sh/chart: harbor-24.0.2
  name: harbor-jobservice
  namespace: harbor
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
    - port: 8001
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jobservice
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: harbor
  policyTypes:
  - Ingress
  - Egress
